--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -27,6 +27,7 @@
           score.wins = 0;
           score.losses = 0;
           score.ties = 0;
+          localStorage.removeItem("scores");
 
           alert("YOUR SCORE HAS BEEN RESET");
         }
